Finish png to tilemap and palette conversion

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 objs/
-dist/README-SDL.txt
-dist/game.ilk
-dist/game.pdb
-dist/SDL2.dll
-dist/game
-dist/game.exe
+dist/
+assets/*.xcf
+assets/*.png
+.vscode/
